# PHASE

./: .gitignore  README.md  pyproject.toml
camera/: camera.py
phase/: __init__.py
phase/colony_detection/: counting.py
phase/helpers/: inputs.py  plotting.py  timelapse.py
phase/image_manipulation/: dish_detection.py  preprocessing.py
phase/main/: colony.py  data.py  dish.py  frame.py  main.py  run.py  timeseries.py
tests/: data.py  debug_run.py  debug_segment.ipynb  debug_segment.py  export_debug.py  export_debug_synth.py  export_debug_timelapse.py  test_image_manipulation.py  test_integration_timeseries.py  test_main.py  test_paths.py  test_timelapse.py
