[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PHASE"
version = "0.2.0"
description = "A Python package for the image-based quantification of distinct lag phases during colony growth of carbon-starved E. coli."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Jakub Niklas", email = "jakubniklas03@gmail.com" }
]
urls = { "Homepage" = "https://github.com/jniklas03/PHASE/" }

dependencies = [
    "colorama>=0.4.6",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "fonttools>=4.61.1",
    "iniconfig>=2.3.0",
    "kiwisolver>=1.4.9",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "packaging>=25.0",
    "pillow>=12.1.0",
    "pluggy>=1.6.0",
    "Pygments>=2.19.2",
    "pyparsing>=3.3.1",
    "pypdf>=6.6.0",
    "pytest>=9.0.2",
    "python-dateutil>=2.9.0.post0",
    "PyYAML>=6.0.3",
    "six>=1.17.0",
    "tqdm>=4.67.3"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
markers = [
    "slow: marks integration tests as slow"
]
addopts = '-m "not slow"'