[tool.poetry]
name = "PHASE"
version = "0.3.0"
description = "A Python package for the image-based quantification of distinct lag phases during colony growth of carbon-starved E. coli."
authors = ["Jakub Niklas <jakubniklas03@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/jniklas03/PHASE/"
packages = [{ include = "PHASE" }]

[tool.poetry.dependencies]
python = ">=3.11"
colorama = "0.4.6"
contourpy = "1.3.3"
cycler = "0.12.1"
fonttools = "4.62.0"
iniconfig = "2.3.0"
kiwisolver = "1.5.0"
matplotlib = "3.10.8"
numpy = "2.4.3"
opencv-python = "4.13.0.92"
packaging = "26.0"
pillow = "12.1.1"
pluggy = "1.6.0"
Pygments = "2.19.2"
pyparsing = "3.3.2"
pypdf = "6.8.0"
python-dateutil = "2.9.0.post0"
PyYAML = "6.0.3"
six = "1.17.0"
tqdm = "4.67.3"
scipy = "^1.17.1"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"

[tool.pytest.ini_options]
markers = [
    "slow: marks integration tests as slow"
]
addopts = '-m "not slow"'

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]